--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,11 @@
 yoshimi 2.3.1 M
 
-2023-11-09 Will
+2023-11-11 Will
+bn 2281
+Added 'design Notes' file to Yoshimi Control Data
+    also a few more clarifications
+
+2023-11-10 Will
 bn 2280
 BugFix: copy/paste assuming text returned in text message 0
 Resolved ambiguities in Yoshimi Control Data
