Changed source file Presets.h to ParamCheck.h Changed source file Presets.cpp to ParamCheck.cpp

--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,8 @@ Changed Presets internal name "presets" to "params"
 Changed "PresetsUpdate" to "ParamsUpdate"
 Changed "changePresets" to "changeParams"
 Changed "presetsUpdated" to "paramsChanged"
+Changed source file Presets.h to ParamCheck.h
+Changed source file Presets.cpp to ParamCheck.cpp
 
 2023-11-14 Will
 bn 2283
