--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -4,8 +4,6 @@ BUG! stand-alone GUI freezes and no further system changes if new instance start
 
 Minor bug Multi instances produce jack error reports when main instance closed, even if they have been closed first - been there since V 1.4.1 :(
 
-Revise GUI voice list related to voice editor.
-
 Add dynfilter filter types to prompt.
 Never been done before :(
 
@@ -13,6 +11,12 @@ CLI waveform (in voice) changes don't update GUI unless waveform window is open 
 
 LV2: internal sound banks do not appear to be exposed as LV2 presets
 Visible in carla apparently.
+
+first time find manual
+    find / 2>/dev/null -type d -name yoshimi_user_guide
+then test ~/files/yoshimi_user_guide_version
+pick one with highest value and put link in ./local/share/yoshimi
+use this for all calls for manual
 
 In filer show actual extension (xiz/xiy)
 
