--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,14 @@
-yoshimi 2.3.1.2
+yoshimi 2.3.1.3
+
+2023-12-2 Will
+bn 2291
+BugFix: Rather obscure build failure - not finding inline loadText()
+    Only happens on a headless build.
+
+Updated ParamCheck.cpp/.h copyrights.
+    None of this code predates Kristian's work.
+Spelling corrections in User Guide and Control Data
+Set bugfix release 2.3.1.3
 
 2023-12-1 Will
 bn 2290
