--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,9 @@
-yoshimi 2.3.1.3
+yoshimi 2.3.1.3 M
+
+2023-12-4 Will
+bn 2292
+Finding the HTML guide now handles versions with M or rc suffixes.
+Further updates to dev_notes.
 
 2023-12-2 Will
 bn 2291
