--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.3.1.3 M
 
+2023-12-8 Will
+bn 2293
+Removed redundant code that was generating warnings in clang.
+
 2023-12-4 Will
 bn 2292
 Finding the HTML guide now handles versions with M or rc suffixes.
