--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 yoshimi 2.3.1.3 M
 
-2023-12-8 Will
+2023-12-11 Will
+bn 2295
+BugFix: using copy/paste leaked text messages
+
+2023-12-10 Will
 bn 2294
 Added test for max text messages used (disabled)
 Re-implemented text message clear on hard reset (ctrl+Reset)
