--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.3.1.3 M
 
+2023-12-19 Will
+bn 2296
+Revised read and write controls in MiscGui.cpp
+
 2023-12-11 Will
 bn 2295
 BugFix: using copy/paste leaked text messages
