--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.3.1.3 M
 
+2023-12-21 Will
+bn 2297
+Started removing direct GUI reads from addSynth engine.
+Replaced some magic numbers in GUI with labels.
+
 2023-12-19 Will
 bn 2296
 Revised read and write controls in MiscGui.cpp
