--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 yoshimi 2.3.1.3 M
 
 2023-12-21 Will
+Further removal of direct GUI reads from addSynth.
+
+2023-12-21 Will
 bn 2297
 Started removing direct GUI reads from addSynth engine.
 Replaced some magic numbers in GUI with labels.
