--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 yoshimi 2.3.1.3 M
 
-2023-12-21 Will
+2023-12-23 Will
+Revised coding style of addSynth GUI for consistency
+
+2023-12-22 Will
 Further removal of direct GUI reads from addSynth.
 
 2023-12-21 Will
