--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 yoshimi 2.3.1.3 M
 
 2023-12-23 Will
+bn 2298
+More removal of direct GUI reads from addSynth
+
+2023-12-23 Will
 Revised coding style of addSynth GUI for consistency
 
 2023-12-22 Will
