--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 yoshimi 2.3.1.3 M
 
-2023-12-23 Will
+
+2023-12-28 Will
+Continuing work on addSunth GUI reads
+
+2023-12-26 Will
 bn 2298
 More removal of direct GUI reads from addSynth
 
