--- a/Changelog
+++ b/Changelog
@@ -1,8 +1,13 @@
 yoshimi 2.3.1.3 M
 
+2023-12-31 Will
+bn 2299
+Continuing work on addSynth GUI reads
+Also finding and removing duplicated error checks.
+Adjusted voice GUI detune so numbers don't spill over.
 
 2023-12-28 Will
-Continuing work on addSunth GUI reads
+Continuing work on addSynth GUI reads
 
 2023-12-26 Will
 bn 2298
