--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,10 @@ yoshimi 2.3.1.3 M
 2024-1-1 Will
 Most of addSynth voice gui done, but found earlier bug :(
 
+Bugfix: Wrong command used for modulator source
+Bugfix: Wrong offset for Octave
+More reads converted.
+
 2023-12-31 Will
 bn 2299
 Continuing work on addSynth GUI reads
