--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 2.3.1.3 M
 
+2024-1-2 Will
+bn 2300
+More reads converted.
+Created new read-only control for updating voice detunes.
+Updated HTML Control Data.
+
 2024-1-1 Will
 Most of addSynth voice gui done, but found earlier bug :(
 
