--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,13 @@
 yoshimi 2.3.1.3 M
 
+2024-1-3 Will
+bn 2301
+Created new read-only control for unison spread in Cents.
+Updated HTML Control Data.
+Working through voice list refresh code.
+Removed some duplicated code.
+Identified other seemingly duplicated.
+
 2024-1-2 Will
 bn 2300
 More reads converted.
