--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.3.1.3 M
 
+
+2024-1-6 Will
+bn 2302
+Reverted changes made with commit aae021c4
+
 2024-1-3 Will
 bn 2301
 Created new read-only control for unison spread in Cents.
