--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.3.1.3 M
 
+2024-1-11 Will
+bn 2304
+Moved duplicated code on voice and voice list to header file in MiscGui.
+Added missing voice waveform updates.
+
 2024-1-8 Will
 bn 2303
 Converted some of the more complex Voice controls
