--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,12 @@
 yoshimi 2.3.1.3 M
 
+2024-1-13 Will
+bn 2305
+Fixed regression: noise labels not updating.
+Simplified noise label function.
+Further conversions.
+Now working through AddSynth Global
+
 2024-1-11 Will
 bn 2304
 Moved duplicated code on voice and voice list to header file in MiscGui.
