--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.3.1.3 M
 
+2024-1-14 Will
+bn 2306
+Completed AddSynth conversions that don't redraw waveforms.
+
 2024-1-13 Will
 bn 2305
 Fixed regression: noise labels not updating.
