--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 2.3.1.3 M
 
+2024-1-17 Will
+bn 2307
+BugFix: Filter UI not displaying Q real value.
+DynFilter no longer needs 'spare1'.
+Updated Control Data.
+
 2024-1-14 Will
 bn 2306
 Completed AddSynth conversions that don't redraw waveforms.
