--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,11 @@
 yoshimi 2.3.1.3 M
 
 2024-1-17 Will
+bn 2308
+Some small cleanups in EnvelopeUI.
+Removed unused duplicate freemode button.
+
+2024-1-17 Will
 bn 2307
 BugFix: Filter UI not displaying Q real value.
 DynFilter no longer needs 'spare1'.
