--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.3.1.3 M
 
+2024-1-21 Will
+bn 2309
+Completed conversion of LFO inserts.
+
 2024-1-17 Will
 bn 2308
 Some small cleanups in EnvelopeUI.
