--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.3.1.3 M
 
+2024-1-29 Will
+bn 2310
+Trial of SubSynth slider bank update.
+
 2024-1-21 Will
 bn 2309
 Completed conversion of LFO inserts.
