--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,8 @@ yoshimi 2.3.1.3 M
 bn 2310
 Trial of SubSynth slider bank update.
 
+Forgot a bit!
+
 2024-1-21 Will
 bn 2309
 Completed conversion of LFO inserts.
