--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.3.1.3 M
 
+2024-2-4 Will
+Added "Major control updates on window refresh" to dev_notes
+
 2024-1-29 Will
 bn 2310
 Trial of SubSynth slider bank update.
