--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.3.1.3 M
 
+2024-2-6 Will
+bn 2311
+Working through conversion of normal SubSynth controls.
+
 2024-2-4 Will
 Added "Major control updates on window refresh" to dev_notes
 
