--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,12 @@
 yoshimi 2.3.1.3 M
 
 2024-2-6 Will
+bn 2312
+CLI can now handle master volume and master detune as floats.
+Completed conversion of normal SubSynth controls.
+Paste function correctly positions all controls.
+
+2024-2-6 Will
 bn 2311
 Working through conversion of normal SubSynth controls.
 
