--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,11 @@
 yoshimi 2.3.1.3 M
 
-2024-2-6 Will
+2024-2-9 Will
+bn 2313
+Build option ReportNoteTimes now working properly.
+Various small GUI refinements and cleanups.
+
+2024-2-8 Will
 bn 2312
 CLI can now handle master volume and master detune as floats.
 Completed conversion of normal SubSynth controls.
