--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,15 @@
-yoshimi 2.3.1.3 M
+yoshimi 2.3.2 rc1
+
+2024-2-14 Will
+bn 2315
+BugFix: Wrong default for insert type chorus volume.
+BugFix: New echo separate button text not scaled.
+BugFix: Effects text not rescaled if opened at large size.
+BugFix: Sys/Ins not rescaled if window resized when hidden.
+Updated Yoshimi Control data.
+Finalised integration of separate L/R Echo repeat rates.
+Revised some of the User Guide.
+Added some instrument patches.
 
 2024-2-11 Will
 bn 2314
