--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,11 @@
-yoshimi 2.3.2 rc1
+yoshimi 2.3.2 rc2
+
+
+2024-2-14 Will
+bn 2316
+BugFix: From Kristian: Missing file in LV2 code
+BugFix: From Kristian: Incorrect Kitmode GUI setting
+Set version 2.3.2 rc2
 
 2024-2-14 Will
 bn 2315
