--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,13 @@
 yoshimi 2.3.2 rc2
 
+2024-2-18 Will
+bn 2317
+Some small CLI text corrections
+Updated HTML guide
+Cleaned up some coding style inconsistencies
+No code changes
 
-2024-2-14 Will
+2024-2-17 Will
 bn 2316
 BugFix: From Kristian: Missing file in LV2 code
 BugFix: From Kristian: Incorrect Kitmode GUI setting
