Created new files Interchange/Vector.cpp & Interchange/Vector.h Transferred Load, Save, and Limits to these and commented out SynthEngine versions. Will leave these in place for further testing.
Also found CLI wasn't checking Limits so corrected this for major
controls. This needs more work to check the remainder.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.3.2 M
 
+Transfered Vector load/save from SynthEngine to
+    new /Interchange/Vectors
+
 2024-3-7 Will
 bn 2319
 Merged in new GUI/core interface from Hermann
