--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 2.3.2 M
 
+
+2024-3-11 Will
+bn 2320
+BugFix: CLI not recognising 'type' returned by limits code.
+BugFix: Master detune not identified as float type.
+
 BugFix: CLI not checking XML copmpression range.
 Forced type to integer for all CLI config tests.
 
