Split off config state loading from LV2 Previously, from LV2 we were loading saved instance data (if it existed) then for an existing project overwriting this with the LV2 saved data. If it was a completely new instance it would in any case start with the default config so this was quite pointless.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.3.2 M
 
+2024-3-17 Will
+bn 2321
+Split off config state loading from LV2
+
 BugFix: "Enable Single Master" accesssable on secondary instances.
 Removed (now redundant) disabled code from SynthEngine.cpp
 Also removed long unused SSE code from Config.cpp
