--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.3.2 M
 
+
+2024-4-17 Will
+Further revision of base config for better isolation and correctness.
+
 2024-4-13 Will
 bn 2324
 Reorganised control values for config so all base ones are together
