--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.3.2 M
 
+All currently defined config setting now immediate.
+Updated GUI.
+Disabled automatic config save on exit.
+User manual location now properly integrated into config.
+
 2024-4-19 Will
 bn 2325
 Structure of UpdateConfig now complete. Just details to fill in now.
