--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.3.2 M
 
+2024-4-24 Will
+bn 2327
+Applied instrument change GUI bugfix patch from Hermann.
+Removed some now redundant config change notification code.
+
 2024-4-21 Will
 bn 2326
 Removed all reference to singleRowPanel.
