--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,12 @@
 yoshimi 2.3.2 M
 
+2024-5-3 Will
+bn 2328
+Updated config images in user guide.
+Re-ordered early guide entries.
+Added a proper 'Monochrome' button to themes.
+Adjusted EQ window sizes to match others.
+
 2024-4-24 Will
 bn 2327
 Applied instrument change GUI bugfix patch from Hermann.
