--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 2.3.2 M
 
+2024-5-24
+bn 2330
+Updated some dev-notes.
+Clarified microtonal error reporting.
+Commented out test messages in updateConfig.
+
 2024-5-6 Will
 bn 2329
 BugFix: Not updating 'banks_checked' in config file.
