--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -1,20 +1,15 @@
-BUG! Loading a MidiLearn file doesn't show the control text of the first line.
-
-BUG! If jack is selected for audio but there are no physical ports Yoshimi quits with CLI warning - should continue run with no audio and gui warning as well, or better still loop back to try alsa.
 
 BUG! stand-alone GUI freezes and no further system changes if new instance started while instrument change in progress.
 
 Minor bug Multi instances produce jack error reports when main instance closed, even if they have been closed first - been there since V 1.4.1 :(
 
-Add dynfilter filter types to prompt.
+Add dynfilter filter types to CLI prompt.
 Never been done before :(
 
 CLI waveform (in voice) changes don't update GUI unless waveform window is open too.
 
 LV2: internal sound banks do not appear to be exposed as LV2 presets
 Visible in carla apparently.
-
-In themes, consider moving action for grey map *after* colours have been redefined.
 
 In filer show actual extension (xiz/xiy)
 
