Further refined crossfade action, removing duplicated calculations. Changed internal note velocity to float - seesm to be slightly smoother. Added internal note volume - not currently in use.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.3.2 M
 
+Further refined crossfade action.
+Changed internal note velocity to float.
+Added internal note volume.
 
 Performed initial separation of crossfade multiplier from fade type.
 
