--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.3.2 M
 
+2024-6-16 Will
+bn 2334
+Config->Theme 'monchrome' button now takes immediate effect.
+Updated HTML guide.
+
 2024-6-9 Will
 bn 2333
 Merged in crossfade branch.
