--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.3.2 M
 
+
+Revised some theme labels for improved clarity.
+
 2024-6-16 Will
 bn 2334
 Config->Theme 'monchrome' button now takes immediate effect.
