Removed some redundant UI 'damage()' calls.     Use was misunderstood when first added. All spinbox arrows now show correct colour.     Arrows also rescale nicely.     Will see if the same can be done for menu down arrows. Corrected UI/WidgetSpinner copyright info.     Jesper originated this, but put my name to it.

--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -1,6 +1,9 @@
 
 BUG! stand-alone GUI freezes and no further system changes if new instance started while instrument change in progress.
 
+BUG! Vector window instrument label colours not updated when engines are manually changed.
+    OK when loading instruments etc.
+
 Minor bug Multi instances produce jack error reports when main instance closed, even if they have been closed first - been there since V 1.4.1 :(
 
 Add dynfilter filter types to CLI prompt.
