--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,12 @@
 yoshimi 2.3.2 M
 
+2024-6-21 Will
+bn 2337
+Removed some redundant UI 'damage()' calls.
+All spinbox arrows now show correct colour.
+    Arrows also rescale nicely.
+Corrected UI/WidgetSpinner copyright info.
+
 2024-6-20 Will
 bn 2336
 Theme changes now auto-detected.
