--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.3.2 M
 
+2024-7-1 Will
+bn 2339
+Corrected minor errors in HTML Control Data files.
+Added red-tint-clr to doc/examples.
+
 2024-6-27 Will
 bn 2338
 Some minor GUI cleanups.
