--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.3.2 M
 
+2024-7-18 Will
+bn 2343
+BugFix: Config code not correctly readingXML getPar(
+
 2024-7-15 Will
 bn 2342
 Removed redundant CLI common controls list.
