--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.3.2 M
 
+2024-7-30 Will
+bn 2345
+Revised CLI zread - now includes offset.
+    Updated dev_notes
+
 2024-7-22 Will
 bn 2344
 Revised and simplified CLI Y/N query code.
