--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,12 @@
 yoshimi 2.3.2 M
 
+2024-8-6 Will
+bn 2346
+Corrected State menu options.
+Further adjustments to zread.
+Improved and added to keyboard shortcuts.
+Updated User Guide.
+
 2024-7-30 Will
 bn 2345
 Revised CLI zread - now includes offset.
