--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.3.2 M
 
+2024-8-22 Will
+bn 2348
+Theme tab now changes its own display when setting 'Monochrome'.
+Removed non-working event handler in PartUI.
+
 2024-8-16 Will
 bn 2347
 BugFix: temporary fix for segfault in SubSynth
