Updated HTML User Guide images to reflect current appearance.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.3.2 M
 
+2024-9-7 Will
+bn 2352
+Updated HTML User Guide images to reflect current appearance.
+
+
 2024-9-5 Will
 bn 2351
 BugFix: mixer panel not updating with correct colours.
