--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.3.2 M
 
+2024-9-19 Will
+bn 2356
+Revised panel window control, reinstating link between MasterUI
+    and ConfigUI for this.
+
 2024-9-18 Will
 bn 2355
 Set version as 2.3.3 rc1
