Final testing and doc updates Set release version 2.3.3

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,9 @@
-yoshimi 2.3.2 M
+yoshimi 2.3.3
+
+2024-9-23
+bn 2359
+Final testing and doc updates
+Set release version 2.3.3
 
 2024-9-21 Will + Hermann
 bn 2358
