--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,10 @@
-yoshimi 2.3.3
+yoshimi 2.3.3.1
+
+2024-9-25 Will + Hermann
+bn 2360
+Included bugfixes from Hermann.
+Corrected some minor doc typos.
+Set bugfix release version 2.3.3.1
 
 2024-9-23
 bn 2359
