--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,8 @@
-yoshimi 2.3.3.1
+yoshimi 2.3.3.1 M
+
+2024-10-10 Will
+bn 2361
+Commented out manual search in 'home' directory.
 
 2024-9-25 Will + Hermann
 bn 2360
