--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 2.3.3.1 M
 
+2024-11-8 Will
+bn 2364
+BugFix: Main and Panel windows getting out of sync.
+Removed GUI 'active part' and instead kept npart in sync.
+    Mostly in sync now, but Vector control not correct.
+
 2024-11-6 Will
 bn 2363
 Minor doc updates.
