--- a/Changelog
+++ b/Changelog
@@ -1,11 +1,17 @@
 yoshimi 2.3.3.1 M
 
+2024-11-12 Will
+bn 2366
+Added formal method of testing CCs against known ones.
+Enabled reading vector X & Y features as groups.
+Resolved 2 overlooked direct calls in VectorUI.
+Updated HTML Control Data.
 
 2024-11-10 Will
 bn 2365
 Implimented new part control to discover active engines.
     Used by VectorUI, PartUI, Master()
-VectorUI no longer makes diect calls into the synth.
+VectorUI no longer makes direct calls into the synth.
 Updated HTML Control Data
 
 Established full sync between Main window and Vectors.
