--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 2.3.3.1 M
 
+2024-11-30 Will
+bn 2370
+BugFix: Not clearing 'old' config status unless change made.
+Minor corrections to HTML User Guide.
+
+
 2024-11-20 Will
 bn 2369
 BugFix: Loading a preset via the CLI not checking file
