BugFix: Not clearing 'old' config status unless change made.
This is triggered when a pristine install creates a full set of instrument banks.
Doing so, takes long enough to trigger a timeout. This *provisional* fix extends
the timeout for the first few calls. Experienced users could work round this, but
the majority would be unable to.
A more appropriate solution will be implemented as soon as possible.

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,8 @@
-yoshimi 2.3.3.1 M
+yoshimi 2.3.3.2 rc1
+
+2024-12-02 Will
+bn 2371
+BugFix: Startup fails on pristine installs.
 
 2024-11-30 Will
 bn 2370
