Changed Main window instrument display format to Bold.     This makes it easier to see when the colour changes to indicate a     Yoshimi type instrument. Saving a Bank Root can now create a new directory on the fly.     Previously you had to externally create an empty directory, or use     an exisiting one. New CLI test entry 'zset' creates a SubSynth instrument.     This can be done in Parts 1 to 16, and uses the same routine that is     used when creating a new bank root. CLI test entry'zread' formalised.     No longer has a timer option - a bit pointless these days - but still     applies the entry without error checks, so you can test the response     to out-of-bound values. Updated min. cmake to 2.12 to fall in line with debian. Updated dev_notes. Updated HTML Control Data.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,15 @@
 yoshimi 2.3.3.2
 
+2024-12-27 Will
+bn 2373
+Changed Main window instrument display format to Bold.
+Saving a Bank Root can now create a new directory on the fly.
+New CLI test entry 'zset' creates a SubSynth instrument.
+CLI test entry'zread' formalised.
+Updated min. cmake to 2.12
+Updated dev_notes.
+Updated HTML Control Data.
+
 2024-12-03 Will
 bn 2372
 Merged in further improvements from Hermamm.
