--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.3.3.2
 
+2025-1-3 Will
+bn 2374
+Bugfix: formant filter graph - wrong response to R mouse click.
+Bugfix: formant filter graph - wrong response to mouse wheel.
+
 2024-12-30 Will
 Minor code cleanups - removal of redundant code
 dev_notes updates and corrections.
