--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 2.3.3.2
 
+2025-1-23 Will
+bn 2378
+Further work on new Display controls
+    Currently only stand-alone and accessible from zread.
+    Now checks for GUI enabled, and valid part level.
+
 2025-1-21 Will
 bn 2377
 Renamed new Geometry section to Display.
