--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,14 @@
-yoshimi 2.3.3.2
+yoshimi 2.3.3.3
+
+2025-2-26 Will
+bn 2382
+Added tooltip to main window menu bar.
+Set bugfix release to 2.3.3.3
+Added canaries (currently disabled)
+    YoshimiLV2Pligin.cpp
+        lines 293 - 298, 634
+    Interchange.cpp
+        line 1840
 
 2025-2-7 Will
 bn 2381
