--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,9 @@
-yoshimi 2.3.3.3
+yoshimi 2.3.3.3 M
+
+2025-5-9 Will
+bn 2385
+Removed redundant and commented YoshiWin code.
+Removed unnecessary FL.x entry in WidgetPDial.
 
 2025-4-8 Will
 bn 2384
