--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,17 @@
-yoshimi 2.3.4.1
+yoshimi 2.3.4.1 M
+
+2025-7-23 Will
+bn 2394
+Added Slow Cymbal instrument to Drums bank.
+Preliminary work on CLI reading freemode points.
+Updated various docs.
+
+2025-7-17 Will
+bn 2393
+Merged in freemode midi learn from Kristian.
+Clarified MIDI learn action in the HTML user guide
+Merged in user guide image optimisation from Jesper.
+Added Slow Cymbal the Drums bank.
 
 2025-6-10 Will + Hermann
 bn 2392
