--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.3.4.1 M
 
+2025-8-27 Will
+bn 2396
+Added scale tracking to Random Walk window
+
 2025-8-24 Jesper
 bn 2395
 Added scale tracking and tooltip size adjustment based on window under cursor.
