--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.3.4.1 M
 
+2025-8-30 Will
+bn 2398
+Added missing include file to LV2 cmake file
+
 2025-8-27 Jesper
 bn 2397
 Adjusted tooltip positioning to handle cursor placements close to bottom of screen.
