--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.3.4.1 M
 
+2025-9-17 Will
+bn 2400
+Made small adjustments to tooltip sizes.
+Min. is 12 point, and large sizes track a bit better.
 
 2025-9-3 Will
 bn 2399
