Final preparations for the next release. Updated docs.

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,9 @@
-yoshimi 2.3.4.1 M
+yoshimi 2.3.5 rc1
+
+2025-9-18 Will
+bn 2402
+Final preparations for the next release.
+Updated docs.
 
 2025-9-17 Will
 bn 2400
