--- a/desktop/yoshimi.1
+++ b/desktop/yoshimi.1
@@ -1,4 +1,4 @@
-.TH yoshimi 1 " 2025" "yoshimi 2.3.4"
+.TH yoshimi 1 " 2025" "yoshimi 2.3.5"
 .SH NAME
 yoshimi \- a software music synthesiser
 .SH SYNOPSIS
@@ -26,7 +26,7 @@ Further developments are backward compatible high resoluting controls for signif
 We also have improved handling of microtonal scales, and added ability to export .scl and 'kbd files.
 It is now possible to set different left/right Echo repeat rates.
 .PP
-Part level MIDI 'Omni' now available. There is now a warning messages if action is taken that could overwrite an instrument that has unsaved edits made.
+Part level MIDI 'Omni' now available. There is now a warning messages if action is taken that could overwrite an instrument that has unsaved edits made. The SubSynth engine now has a set of LFOs
 .SH COMMANDS
 .TP
 .BR \-? ", " \-\-help " Shows command syntax."
