--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,8 @@
-yoshimi 2.3.5 rc1
+yoshimi 2.3.5 rc2
+
+2025-9-21 Will
+bn 2403
+BugFix: Main window top controls partially obscured.
 
 2025-9-18 Will
 bn 2402
