Some final cleanups and doc. updates. Set release version 2.3.5

--- a/desktop/yoshimi.1
+++ b/desktop/yoshimi.1
@@ -27,6 +27,8 @@ We also have improved handling of microtonal scales, and added ability to export
 It is now possible to set different left/right Echo repeat rates.
 .PP
 Part level MIDI 'Omni' now available. There is now a warning messages if action is taken that could overwrite an instrument that has unsaved edits made. The SubSynth engine now has a set of LFOs
+.PP
+LFOs have been added to the SUBsynth engine mastching thos in the other engine types.
 .SH COMMANDS
 .TP
 .BR \-? ", " \-\-help " Shows command syntax."
