--- a/Changelog
+++ b/Changelog
@@ -1,9 +1,14 @@
-yoshimi 2.3.5 rc3
+yoshimi 2.3.5
+
+2025-9-26 Will
+bn 2406
+Some final cleanups and doc. updates.
+Set release version 2.3.5
 
 2025-9-25 Will
 bn 2405
 Corrected rotatary knob scaling for fltk 1.4
-Bugfix: not shoing correct colour for yoshimi instruments.
+Bugfix: not showing correct colour for yoshimi instruments.
 set version as 2.3.5 rc3
 
 2025-9-21 Will
