Replaced rotary knob change with improved version from Jesper.

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,8 @@
-yoshimi 2.3.5
+yoshimi 2.3.5 M
+
+2025-9-27 Will
+bn 2407
+Replaced rotary knob change with improved version from Jesper.
 
 2025-9-26 Will
 bn 2406
@@ -7,7 +11,7 @@ Set release version 2.3.5
 
 2025-9-25 Will
 bn 2405
-Corrected rotatary knob scaling for fltk 1.4
+Corrected rotary knob scaling for fltk 1.4
 Bugfix: not showing correct colour for yoshimi instruments.
 set version as 2.3.5 rc3
 
