--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 yoshimi 2.3.5.3
 
 2026-01-17 Will
+bn 2416
+Changing partlevel controls are no linger marked as instriment changed.
+
+2026-01-17 Will
 bn 2415
 SubSynth bandwidth scale drawing no longer uses cairo
 (although the original code has been kept but disabled)
