CLI crossfade vol now works correctly - needed to increase the limit value in Misc/Part.cpp

--- a/Changelog
+++ b/Changelog
@@ -7,6 +7,7 @@ This was caused by the position of effectNumber in globals.h
 Moving this past those controls so that it is with the other effect
 controls cures the problem.
 It seems it is acting as a group boundary.
+CLI crossfade vol now works correctly - needed to increase the limit value in Misc/Part.cpp
 
 2026-02-5 Will
 bn 2417
